[gd_scene load_steps=10 format=3 uid="uid://dupxxjsd5fuln"]

[ext_resource type="Script" path="res://scripts/displays/MainScene.gd" id="1_ksh1o"]
[ext_resource type="Texture2D" uid="uid://mgs8jqnqkqxs" path="res://assets/logos/title_logo.png" id="2_faj2m"]
[ext_resource type="Texture2D" uid="uid://b6hjfhcuaa004" path="res://assets/ui/menu/Menu full.png" id="3_xiw7e"]
[ext_resource type="Texture2D" uid="uid://chtnlns3fr5n" path="res://assets/ui/menu/Load.png" id="4_o3f2f"]
[ext_resource type="Texture2D" uid="uid://bvrv2mgh6y4hf" path="res://assets/ui/menu/Start.png" id="4_vfg83"]
[ext_resource type="Texture2D" uid="uid://b635bj3vt4eno" path="res://assets/ui/menu/Start_Pressed.png" id="5_0iq1q"]
[ext_resource type="Texture2D" uid="uid://cr1u8p3qxbqm2" path="res://assets/ui/menu/Load_Pressed.png" id="5_l1lj3"]
[ext_resource type="Texture2D" uid="uid://bynhsfqv4b8rx" path="res://assets/ui/menu/Exit.png" id="6_g2xif"]
[ext_resource type="Texture2D" uid="uid://dmn3c3wa0vn3u" path="res://assets/ui/menu/Exit_Pressed.png" id="7_jusne"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ksh1o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 59.0
offset_top = 122.0
offset_right = 2491.0
offset_bottom = 1731.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_faj2m")

[node name="StartMenu" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -817.0
offset_top = -1024.0
offset_right = 3023.0
offset_bottom = 1136.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(1091.18, 998.22)
texture = ExtResource("3_xiw7e")
stretch_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/StartMenu"]
layout_mode = 0
offset_left = 678.0
offset_top = 366.0
offset_right = 3666.0
offset_bottom = 5898.0
scale = Vector2(0.25, 0.25)
theme_override_constants/v_separation = 200

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/StartMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_vfg83")
texture_pressed = ExtResource("5_0iq1q")
texture_hover = ExtResource("5_0iq1q")

[node name="LoadButton" type="TextureButton" parent="CanvasLayer/StartMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_o3f2f")
texture_pressed = ExtResource("5_l1lj3")
texture_hover = ExtResource("5_l1lj3")

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/StartMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("6_g2xif")
texture_pressed = ExtResource("7_jusne")
texture_hover = ExtResource("7_jusne")

[connection signal="pressed" from="CanvasLayer/StartMenu/GridContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenu/GridContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartMenu/GridContainer/ExitButton" to="." method="_on_exit_button_pressed"]
